--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1025,6 +1025,7 @@ table {
             width: 225px;
             padding: 0.5rem 1rem;
             color: $color1;
+            cursor: pointer;
 
             img.copyer {
               position: absolute;
