--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -645,14 +645,19 @@ hr {
   border-radius: 50px;
   transition: 0.4s ease;
 
-  &.primary {
-    color: $color1;
-    border-color: $color1;
-  }
-
   &:hover {
     color: #fff;
     background-color: $color2;
+  }
+
+  &.primary {
+    color: $color1;
+    border-color: $color1;
+
+    &:hover {
+      color: #fff;
+      background-color: $color1;
+    }
   }
 }
 
@@ -1103,6 +1108,11 @@ input.custom-input {
       align-items: center;
       padding: 1rem 0;
       padding-left: 5rem;
+      transition: 0.4s ease;
+
+      * {
+        transition: 0.4s ease;
+      }
 
       &.help {
         margin-top: 5rem;
@@ -1118,7 +1128,8 @@ input.custom-input {
 
         svg {
           path,
-          line {
+          line,
+          circle {
             stroke: $color1;
           }
         }
