adds upload button

--- a/assets/css/_constants.scss
+++ b/assets/css/_constants.scss
@@ -24,3 +24,6 @@ $color23: #01c58d;
 $color24: #effffa;
 $color25: rgba(255, 195, 44, 0.12);
 $color26: #fafbfc;
+$color27: #edfbf6;
+$color28: #ff3100;
+$color29: #fff0ed;
