--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -860,6 +860,35 @@ table {
 // ***********************************************************************************************************************************
 // ***********************************************************************************************************************************
 
+//  ********************************************************* UPLOADER PAGE **********************************************************
+
+// ***********************************************************************************************************************************
+// ***********************************************************************************************************************************
+
+#uploader {
+  .file-uploader {
+    padding: 0 2.5rem;
+    position: relative;
+
+    input {
+      width: 100%;
+      height: 132px;
+      border: 1px dotted $color1;
+      background-color: transparent;
+    }
+
+    h4 {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+}
+
+// ***********************************************************************************************************************************
+// ***********************************************************************************************************************************
+
 //  ********************************************************* UPLOADING PAGE ***********************************************************
 
 // ***********************************************************************************************************************************
@@ -1047,6 +1076,142 @@ table {
         .reminder {
           padding-right: 5.5rem;
         }
+      }
+    }
+  }
+}
+
+// ***********************************************************************************************************************************
+// ***********************************************************************************************************************************
+
+//  **************************************************** TRANSACTTIONS PAGE **********************************************************
+
+// ***********************************************************************************************************************************
+// ***********************************************************************************************************************************
+
+#transactions {
+  .filter {
+    width: 94px;
+    height: 40px;
+    margin-left: 3rem;
+  }
+
+  .select-selected {
+    padding: 0.585rem 1rem !important;
+  }
+
+  .transactions-body {
+    .transaction {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 0;
+      border-bottom: 1px solid $color19;
+
+      & > * {
+        &:nth-child(1) {
+          width: 30%;
+        }
+
+        &:nth-child(2),
+        &:nth-child(3) {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        }
+
+        &:nth-child(2) {
+          width: 20%;
+        }
+        &:nth-child(3) {
+          width: 25%;
+        }
+      }
+
+      .details {
+        display: flex;
+        align-items: center;
+
+        img {
+          width: 48px;
+        }
+      }
+
+      .status {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .btn {
+          width: 100px;
+        }
+      }
+    }
+  }
+}
+
+// ***********************************************************************************************************************************
+// ***********************************************************************************************************************************
+
+//  ***************************************************** TRANSACTTION PAGE **********************************************************
+
+// ***********************************************************************************************************************************
+// ***********************************************************************************************************************************
+
+#transaction {
+  h2 {
+    position: relative;
+
+    .back {
+      position: absolute;
+      top: 60%;
+      left: -2rem;
+      transform: translateY(-60%);
+    }
+  }
+
+  .transaction {
+    .transaction-head {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-bottom: 1.5rem;
+      border-bottom: 1px solid $color19;
+
+      .details {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        width: 40%;
+
+        .logo {
+          width: 64px;
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+      .status {
+        .btn {
+          width: 100px;
+        }
+      }
+    }
+
+    .transaction-body {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 1.5rem;
+
+      .nav-date {
+        width: 9%;
+      }
+
+      .folio {
+        width: 21%;
       }
     }
   }
