--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -871,6 +871,11 @@ table {
     position: relative;
 
     input {
+      display: none;
+    }
+
+    label {
+      display: block;
       width: 100%;
       height: 132px;
       border: 1px dotted $color1;
