--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -55,8 +55,20 @@ p {
   font-size: 20px;
 }
 
+.fs-17 {
+  font-size: 17px;
+}
+
+.fs-16 {
+  font-size: 18px;
+}
+
 .fs-18 {
   font-size: 18px;
+}
+
+.fs-12 {
+  font-size: 12px;
 }
 
 .fw-500 {
@@ -91,6 +103,18 @@ p {
 
 hr {
   border-top: 1px solid #bcbcbc;
+}
+
+div.shadowy {
+  border: none;
+  width: 100%;
+  height: 1px;
+  -webkit-box-shadow: 0 4px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 2px rgba(0, 0, 0, 0.1);
+}
+
+.text-underline {
+  text-decoration: underline;
 }
 
 .text-yellow {
@@ -732,6 +756,16 @@ hr {
           flex-grow: 0;
 }
 
+.btn.w-100px {
+  width: 100px;
+}
+
+.btn.btn-bg-light {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#fff));
+  background-image: linear-gradient(to bottom, #f2f2f2, #fff);
+  color: #b2b2b2;
+}
+
 .btn-outlined-dark {
   border: 2px solid #31353f;
   border-radius: 50px;
@@ -794,6 +828,15 @@ hr {
 .custom-form-control h4 {
   font-size: 14px;
   margin-bottom: 0.75rem;
+}
+
+.custom-form-control.empty {
+  height: 35px;
+}
+
+.custom-form-control a {
+  color: #ffc32c;
+  text-decoration: underline;
 }
 
 .custom-form-control.search-sm {
@@ -1307,8 +1350,99 @@ input.custom-input.active, input.custom-input:focus {
 }
 
 #sidenav-container #sidenav-right-content section {
-  max-width: 1252px;
+  max-width: 1276px;
   margin-left: auto;
   margin-right: auto;
+}
+
+/* Dropdown Button */
+.dropbtn {
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.custom-dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.custom-dropdown.show {
+  display: block;
+}
+
+.custom-dropdown.show .dropdown-content {
+  display: block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: -3rem;
+  top: 3rem;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  -webkit-box-shadow: 0px 0px 25px #b2b2b2;
+          box-shadow: 0px 0px 25px #b2b2b2;
+  border-radius: 10px;
+  z-index: 1;
+  width: 384px;
+}
+
+.dropdown-content .head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #fffbef;
+  border: 1px solid #ffc32c;
+  padding: 1rem 2rem;
+}
+
+.dropdown-content .head .text {
+  margin-left: 2rem;
+}
+
+.dropdown-content .body {
+  margin: 2rem 0;
+}
+
+.dropdown-content .body .nav-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem 3.5rem;
+}
+
+.dropdown-content .body .nav-item svg {
+  margin-right: 1.25rem;
+}
+
+.dropdown-content .body .nav-item.active, .dropdown-content .body .nav-item:hover {
+  background-color: #fffbef;
+}
+
+.dropdown-content .body .nav-item.active *, .dropdown-content .body .nav-item:hover * {
+  color: #ffc32c;
+}
+
+.dropdown-content .body .nav-item.active svg path,
+.dropdown-content .body .nav-item.active svg line,
+.dropdown-content .body .nav-item.active svg circle, .dropdown-content .body .nav-item:hover svg path,
+.dropdown-content .body .nav-item:hover svg line,
+.dropdown-content .body .nav-item:hover svg circle {
+  stroke: #ffc32c;
 }
 /*# sourceMappingURL=utilities.css.map */
